// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders selected correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#EDEEEF",
        "flexDirection": "row",
        "marginLeft": 16,
        "paddingVertical": 14,
      }
    }
  >
    <View
      style={
        Object {
          "marginRight": 16,
        }
      }
    >
      <svg
        height={20}
        style={Object {}}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#1AB775"
          strokeWidth={2}
          style={Object {}}
        />
        <circle
          cx="10"
          cy="10"
          fill="#1AB775"
          r="6"
          style={Object {}}
        />
      </svg>
    </View>
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "#2E3338",
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
          "marginRight": 16,
        }
      }
    >
      Example
    </Text>
  </View>
</View>
`;

exports[`renders unselected correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#EDEEEF",
        "flexDirection": "row",
        "marginLeft": 16,
        "paddingVertical": 14,
      }
    }
  >
    <View
      style={
        Object {
          "marginRight": 16,
        }
      }
    >
      <svg
        height={20}
        style={Object {}}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          r="9"
          stroke="#B4B9BD"
          strokeWidth={2}
          style={Object {}}
        />
        <circle
          cx="10"
          cy="10"
          r="6"
          style={Object {}}
        />
      </svg>
    </View>
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "#2E3338",
          "flex": 1,
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
          "marginRight": 16,
        }
      }
    >
      Example
    </Text>
  </View>
</View>
`;
